Security - Refactor security and improve error handling, and enhance response formatting.