@@ -18,6 +18,7 @@ import java.util.Map;
 @Service
 @RequiredArgsConstructor
 public class UserService {
+
     private final UserRepo userRepo;
     private final ProfileImageRepo profileImageRepo;
     private final PasswordEncoder passwordEncoder;
@@ -53,7 +54,7 @@ public class UserService {
         if (request.getUsername() != null)
             existingUser.setUsername(request.getUsername());
 
-        if (request.getPassword() != null && !request.getPassword().isBlank()) {
+        if (request.getPassword() != null && !request.getPassword().trim().isEmpty()) {
             existingUser.setPassword(passwordEncoder.encode(request.getPassword()));
         }
 
